@@ -15,6 +15,7 @@ Current:
   * A command-line switch that copies all log messages to stderr.
   * Batch mode no more adds documents to "recent documents".
   * For purists: A "don't offer known answers" config option.
+  * Now some toolbar items can be disabled.
 
 19.10.0:
   * Corrected a Regression: The better display of exponents failed for exp(x^2).
